--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "1.0.0",
   "proxy": "http://localhost:3000",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next",
@@ -15,19 +14,18 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@zeit/next-css": "^1.0.1",
-    "fs": "0.0.1-security",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.0",
     "next": "^10.0.2",
+    "npm": "^7.0.14",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
-    "react-markdown": "^5.0.2",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0"
   }
