--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@zeit/next-css": "^1.0.1",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.0",
-    "next": "^10.0.2",
-    "npm": "^7.0.14",
+    "next": "^10.0.8",
+    "npm": "^7.6.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.2",
