--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
+    "react-onesignal": "^1.7.0",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0"
   }
