--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@zeit/next-css": "^1.0.1",
+    "fs": "0.0.1-security",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "next": "^10.1.3",
+    "next": "^10.2.0",
     "npm": "^7.9.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -28,8 +29,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
-    "react-onesignal": "^1.7.0",
     "react-quill": "^1.3.5",
-    "react-render-html": "^0.6.0"
+    "react-render-html": "^0.6.0",
+    "sitemap": "^7.0.0"
   }
 }
