--- a/package.json
+++ b/package.json
@@ -22,21 +22,20 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "next": "^11.0.1",
-    "npm": "^7.20.5",
-    "nprogress": "^0.2.0",
+    "next": "^11.1.2",
+    "nextjs-progressbar": "0.0.11",
+    "npm": "^7.24.0",
     "query-string": "^6.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-messenger-customer-chat": "^0.8.0",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
     "react-to-print": "^2.12.6",
     "sitemap": "^7.0.0",
     "slate": "^0.63.0",
-    "slate-history": "^0.62.0",
+    "slate-history": "^0.66.0",
     "slate-hyperscript": "^0.62.0",
     "slate-react": "^0.65.2",
     "swr": "^0.5.6"
