--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.29.3",
     "dompurify": "^2.3.4",
     "feed": "^4.2.2",
     "isomorphic-fetch": "^3.0.0",
@@ -21,14 +21,14 @@
     "jsonwebtoken": "^8.5.1",
     "next": "^12.0.7",
     "next-seo": "^5.4.0",
-    "nextjs-progressbar": "0.0.13",
+    "nextjs-progressbar": "^0.0.16",
     "npm": "^8.3.0",
     "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0",
     "react-render-html": "^0.6.0",
     "react-scroll": "^1.8.7",
     "react-to-print": "^2.14.3",
